infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: ai-personalization-platform
  annotations:
    kubernetes.io/ingress.global-static-ip-name: REPLACE_ENV-ingress-ip
    networking.gke.io/managed-certificates: platform-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: REPLACE_WITH_YOUR_DOMAIN
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-ingestion
                port:
                  number: 80
          - path: /recommend
            pathType: Prefix
            backend:
              service:
                name: inference-api
                port:
                  number: 80
          - path: /privacy
            pathType: Prefix
            backend:
              service:
                name: privacy
                port:
                  number: 80
